--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="mainHeader">
         <nav class="mainNav">
             <ul>
-                <li><a href="aboutMe.html">About Me</a></li>
+                <li><a href="index.html">About Me</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="experience.html">Experience</a></li>
             </ul>
