--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="index.html">About Me</a></li>
                 <li><a href="projects.html">Projects</a></li>
-                <li><a href="experience.html">Experience</a></li>
+                <li><a href="education.html">Education</a></li>
             </ul>
         </nav>
     </header>
@@ -28,10 +28,12 @@
     <div class="aboutMeSection">
         <h1 class="aboutMeHead">About Me</h1>
         <p class="aboutMeText">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Greetings. People refer to me as Austen Van Brogen. My aim is to become an accomplished software engineer,
+            and I have a particular focus on web development. I studied at Iowa State University, where I developed skills with several
+            programming languages, such as Javascript, Java, Python, and C. While at ISU, I participated in several computer science
+            clubs, such as IEEE-HKN where I did work on both the campus branch's website as well as the proper organizations site.
+            I also served as the Service Chair and Recording Secretary for ISU's IEEE-HKN branch. Additionally, I also participated 
+            in the Web Development club and Data Science club.
         </p>
     </div>
 </body>
