--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
                 <ul>
                     <li><a href="index.html">About Me</a></li>
                     <li><a href="projects.html">Projects</a></li>
-                    <li><a href="experience.html">Experience</a></li>
+                    <li><a href="education.html">Education</a></li>
                 </ul>
             </nav>
         </header>
