Fixed a spacing issue for the school pictures and the test describing my time there

--- a/education.html
+++ b/education.html
@@ -27,7 +27,10 @@
         </a>
         <h2>Iowa State University</h2>
         <p>During August of 2018 I enrolled in Iowa State University to earn a bachelor's degree in software engineering.
-        I graduated in May of 2022 with a 3.33 GPA    
+        I graduated in May of 2022 with a 3.33 GPA. While at ISU, I was involved with university's IEEE-HKN branch, for which 
+        I served as the Service Chair for two semesters and the Recording Secretary for one. I also participated in ISU's Web 
+        Development club, where we would update websites per the request of the client, who was often another club at the school.
+        Additionaly. I was involded in ISU's Data Science club.  
         </p>
     </div>
     
