Added a section for DMACC to the Education page. I also set it up so that the school sections would be displayed in a column

--- a/education.html
+++ b/education.html
@@ -22,16 +22,29 @@
         <h1 class="educationTitle">Education</h1>
     </div>
     <div class="educationSchools">
-        <a href="/" class="schoolPics">
-            <img src="images/isu1.png">
-        </a>
-        <h2>Iowa State University</h2>
-        <p>During August of 2018 I enrolled in Iowa State University to earn a bachelor's degree in software engineering.
-        I graduated in May of 2022 with a 3.33 GPA. While at ISU, I was involved with university's IEEE-HKN branch, for which 
-        I served as the Service Chair for two semesters and the Recording Secretary for one. I also participated in ISU's Web 
-        Development club, where we would update websites per the request of the client, who was often another club at the school.
-        Additionaly. I was involded in ISU's Data Science club.  
-        </p>
+        <div class="column">
+            <a href="/" class="schoolPics">
+                <img src="images/isu1.png">
+            </a>
+            <h2>Iowa State University</h2>
+            <p>During August of 2018 I enrolled in Iowa State University to earn a bachelor's degree in software engineering.
+            I graduated in May of 2022 with a 3.33 GPA. While at ISU, I was involved with university's IEEE-HKN branch, for which 
+            I served as the Service Chair for two semesters and the Recording Secretary for one. I also participated in ISU's Web 
+            Development club, where we would update websites per the request of the client, who was often another club at the school.
+            Additionaly. I was involded in ISU's Data Science club.  
+            </p>
+        </div>
+        <div class="column">
+            <a href="/" class="schoolPics">
+                <img src="images/dmacc1.jpg">
+            </a>
+            <h2>Des Moines Area Community College</h2>
+            <p>I enrolled into DMACC in August of 2015, where I went for an Associate of Arts Degree and graduated in 2017 
+                with a 3.76 GPA. While there I served on the Student Activities Council, where we worked to spend school funding 
+                on student activities, such as such as when we had Chris Cakes come in and make pancakes for all the students. 
+                I was also asked to be a chemistry tudor, but do to school funding I wasn't able to fulfil that. 
+            </p>
+        </div>
     </div>
     
 </body>
