Started working on the projects page. I added several projects, pictures for them, and text describing them. I also got it formatted similar to the layout of the education page. It looks decent, but I'll need to put more detail into the descriptions of the projects

--- a/projects.html
+++ b/projects.html
@@ -11,6 +11,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="css/styles.css" rel="stylesheet">
+        <link href="css/projects.css" rel="stylesheet">
         <title>Projects</title>
     </head>
     <body>
@@ -26,7 +27,69 @@
                 </ul>
             </nav>
         </header>
-        <h1>Projets</h1>
+        <div class="projectsHead">
+            <h1 class="projectsTitle">Projects</h1>
+        </div>
+        <div class="projectsList">
+            <div class="column">
+                <div class="petImageProject">
+                    <a href="/" class="projectPics">
+                        <image src="images/dog1.jpg"></image>
+                    </a>
+                    <h2>Pet image discord bot</h2>
+                    <p>
+                        This was a discord bot that would send a picture of a cat or a dog when prompted by a user.
+                    </p>
+                </div>
+            </div>
+            <div class="column">
+                <div class="NYTArticleProject">
+                    <a href="/" class="projectPics">
+                        <image src="images/nyt1.png"></image>
+                    </a>
+                    <h2>The New York Times Notifier</h2>
+                    <p>
+                        The New York Times Notifier sends a notification whenever the New York Times publishes a new article
+                        to their sight, and also sends a link to the article.
+                    </p>
+                </div>
+            </div>
+            <div class="column">
+                <div class="insultBotProject">
+                    <a href="/" class="projectPics">
+                        <image src="images/insult1.jpg"></image>
+                    </a>
+                    <h2>Insult Discord bot</h2>
+                    <p>
+                        This is a discord bot that I used can flag with another users tag and the bot will tag that user with 
+                        a goofy insult.
+                    </p>
+                </div>
+            </div>
+            <div class="column">
+                <div class="movieAPIProject">
+                    <a href="/" class="projectPics">
+                        <image src="images/movie1.jpeg"></image>
+                    </a>
+                    <h2>Movie API</h2>
+                    <p>
+                        This was an API I created to show several of the movies that I like.
+                    </p>
+                </div>
+            </div>
+            <div class="column">
+                <div class="imageCyclerProject">
+                    <a href="/" class="projectPics">
+                        <image src="images/cycle.png"></image>
+                    </a>
+                    <h2>Image Cycler</h2>
+                    <p>
+                        I made a css effect where a picture would circle around the screen, and as it was going, other
+                        images from a list would fade in. This made somewhat of an image carousel effect.
+                    </p>
+                </div>
+            </div>
+        </div>
         <script src="" async defer></script>
     </body>
 </html>
